// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/pageTitle add random icon 1`] = `
<div>
  <div
    class="PageTitle"
  >
    <div
      class="add-buttons add-visible"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-emoticon-outline"
        />
        <span>
          Add icon
        </span>
      </button>
    </div>
    <div
      class="title"
    >
      <input
        class="Editable title"
        placeholder="Untitled board"
        spellcheck="true"
        title="title"
        value="title"
      />
    </div>
  </div>
</div>
`;

exports[`components/pageTitle should match snapshot 1`] = `
<div>
  <div
    class="PageTitle"
  >
    <div
      class="add-buttons add-visible"
    />
    <div
      class="title"
    >
      <div
        class="IconSelector"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <div
            class="octo-icon size-m"
          >
            <span>
              i
            </span>
          </div>
        </div>
      </div>
      <input
        class="Editable title"
        placeholder="Untitled board"
        spellcheck="true"
        title="title"
        value="title"
      />
    </div>
  </div>
</div>
`;

exports[`components/pageTitle should match snapshot readonly 1`] = `
<div>
  <div
    class="PageTitle"
  >
    <div
      class="add-buttons add-visible"
    />
    <div
      class="title"
    >
      <div
        class="IconSelector"
      >
        <div
          class="octo-icon size-m readonly"
        >
          <span>
            i
          </span>
        </div>
      </div>
      <input
        class="Editable readonly title"
        placeholder="Untitled board"
        readonly=""
        spellcheck="true"
        title="title"
        value="title"
      />
    </div>
  </div>
</div>
`;

exports[`components/pageTitle should match snapshot readonly without icon 1`] = `
<div>
  <div
    class="PageTitle"
  >
    <div
      class="add-buttons add-visible"
    />
    <div
      class="title"
    >
      <input
        class="Editable readonly title"
        placeholder="Untitled board"
        readonly=""
        spellcheck="true"
        title="title"
        value="title"
      />
    </div>
  </div>
</div>
`;
